--- a/Python_Intermadiate.ipynb
+++ b/Python_Intermadiate.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ginasaniap/Exploratory_Data_Analysis_and_Cluster_Analysis_at_RevoBank/blob/main/Python_Intermadiate.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EYPfgpbHSTC_"
       },
       "source": [
@@ -14806,7 +14816,7 @@
         "---\n",
         "\n",
         "\n",
-        "Based on clustering analysis, we can optimize the cost of promotion by doing ____________ on segment number 2"
+        "Based on clustering analysis, we can optimize the cost of promotion by doing doing sending exclusive promo and we can make loyalty point based on amount of transaction on segment number 2."
       ],
       "metadata": {
         "id": "c6ijwEIiH9bU"
@@ -14815,7 +14825,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
